--- a/Retail_Demand_Forecasting.ipynb
+++ b/Retail_Demand_Forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1d1038be-20b7-455f-917b-c6050035fa38",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "4 2013-01-05      1     1     10"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2c13bb15-3181-453b-8d82-485679293ac7",
    "metadata": {},
    "outputs": [
@@ -130,12 +130,13 @@
     "plt.ylabel('Total Sales')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('Images/forecasted_sales_over_time_by_store.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d2beeb12-9f8b-495c-8799-4de08da6ee7c",
    "metadata": {},
    "outputs": [
@@ -160,12 +161,13 @@
     "plt.ylabel('Average Sales')\n",
     "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('Images/total_sales_by_store.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5b5ec5ed-ee00-4804-a72b-517c3f9dac93",
    "metadata": {},
    "outputs": [
@@ -189,12 +191,13 @@
     "plt.xlabel('Store')\n",
     "plt.ylabel('Average Sales')\n",
     "plt.tight_layout()\n",
+    "plt.savefig('Images/store_vs_item_heatmap.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "46aaa815-ee2f-40d0-b7b2-1a19cd2168bf",
    "metadata": {},
    "outputs": [
@@ -221,12 +224,12 @@
     "plt.ylabel('Total Sales')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('Images/total_sales_by_month.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "393de97d-4b60-4d09-b238-160853bcfb7c",
    "metadata": {},
    "outputs": [
@@ -254,12 +257,12 @@
     "plt.ylabel('Average Sales')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('Images/average_sales_by_day_of_week.png', bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b601fe09-8710-4a2a-aff4-72c372a51934",
    "metadata": {},
    "outputs": [
@@ -284,12 +287,12 @@
     "plt.xlabel('Item')\n",
     "plt.ylabel('Store')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig('Images/avg_sales_per_item_per_store.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f7eb5ae5-22f9-42d9-a7ff-8c3caf484121",
    "metadata": {},
    "outputs": [],
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b9c3b99e-a8c7-4037-aa6f-7329fd106218",
    "metadata": {},
    "outputs": [],
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "998bba6c-40d2-4915-bc8b-9d5a96db4837",
    "metadata": {},
    "outputs": [],
@@ -336,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "755de198-d99b-4ef0-8a96-198e715bb56e",
    "metadata": {},
    "outputs": [],
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cf573ec2-3d31-4318-9bce-24f306be14ee",
    "metadata": {},
    "outputs": [],
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "47643d02-cfc9-4c89-8afa-798b302ce73b",
    "metadata": {},
    "outputs": [],
@@ -374,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ed14ecbd-b88f-4b20-a0f8-73135f556d68",
    "metadata": {},
    "outputs": [],
@@ -392,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e02d39e6-0f45-45e6-bf09-136726098248",
    "metadata": {},
    "outputs": [],
@@ -404,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7050242a-c1f8-476e-b0db-fc5e2854c2d5",
    "metadata": {},
    "outputs": [],
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c48c01e4-4673-4ccc-9952-6d5c719470f0",
    "metadata": {},
    "outputs": [
@@ -445,15 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d6608df-43c9-4749-88f9-8ff368b68ed1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "35e9538b-ec94-4f40-926a-95746e195e44",
    "metadata": {},
    "outputs": [
@@ -485,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d9765c47-5392-43f5-81c8-5fc9543a9a40",
    "metadata": {},
    "outputs": [
@@ -514,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "fc76e5b3-00fe-4f33-adfe-2faf9a2cfc3a",
    "metadata": {},
    "outputs": [],
@@ -540,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "07925e16-2efb-4b99-8396-4c7cf87c3539",
    "metadata": {},
    "outputs": [],
@@ -557,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d38ed401-6886-4c10-826c-4307c36ccc23",
    "metadata": {},
    "outputs": [
@@ -581,14 +576,6 @@
     "\n",
     "print(\"✅ submission.csv saved with date, ready for Tableau.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15a21a37-c175-4981-ada0-eba99ae99146",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
